# rdf-to-jsonld-context

./: .gitignore  GITHUB_ACTION.md  README.md  action.yml  main.py  pyproject.toml
.github/workflows/: README.md  example.yml
